<resources>
    <string name="app_name">Pomodoro</string>

    <string name="work_timer">25:00</string>
    <string name="short_break_timer">05:00</string>
    <string name="long_break_timer">30:00</string>
    <string name="cowntdown_counter">%1$s/4</string>

    <string name="caption_start">Start</string>
    <string name="caption_pause">Pause</string>
    <string name="caption_reset">Reset</string>
    <string name="caption_stop">Stop</string>

    <string name="caption_work">WORK</string>
    <string name="caption_short_break">SHORT BREAK</string>
    <string name="caption_long_break">LONG BREAK</string>
</resources>
