<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/timer_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="183dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0" />

    <TextView
        android:id="@+id/caption_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/caption_work"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timer_progress_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-183dp"
        android:text="@string/work_timer"
        android:textColor="@color/colorWhite"
        android:textSize="50sp" />

    <Button
        android:id="@+id/countdown_button"
        android:layout_width="202dp"
        android:layout_height="60dp"
        android:layout_below="@+id/timer_progress_bar"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/caption_start"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/timer_progress_bar"
        android:layout_marginBottom="25dp"
        android:text="@string/caption_reset" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/timer_progress_bar"
        android:layout_alignTop="@+id/button_reset"
        android:text="@string/caption_stop" />

    <TextView
        android:id="@+id/countdown_cycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caption_text"
        android:layout_centerHorizontal="true"
        android:text="@string/cowntdown_counter" />

    <TextView
        android:id="@+id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countdown_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="195dp"
        android:text="Everytime you hear this song Mississipi rolls along until the end of time."
        android:textSize="20sp" />

    <TextView
        android:id="@+id/quote_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quote"
        android:layout_alignEnd="@+id/quote"
        android:layout_marginTop="-251dp"
        android:layout_marginEnd="2dp"
        android:text="The Pussycat"
        android:textColor="@color/colorTextGray"
        android:textSize="14sp" />

</RelativeLayout>